# kc_vision_ws

./: LICENSE  README.md  frames_2026-04-30_18.21.21.gv  frames_2026-05-01_12.53.16.gv  frames_2026-05-01_17.44.32.gv  frames_2026-06-01_16.55.56.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.3
log/: latest_build
src/: README.md
src/kc_vision_bringup/: CMakeLists.txt  package.xml  read.md
src/kc_vision_bringup/config/: camera.yaml  demo_waypoints.yaml  generated_coverage_path.yaml  gps_wpf_demo.mvc  joy_teleop.yaml  kc_vision_controllers.yaml  nav2_no_map_params copy.yaml  twist_mux.yaml
src/kc_vision_bringup/launch/: LAUNCH_FILES_GUIDE.md  dev_rviz_map_mode.launch.py  dev_rviz_nav_mode.launch.py  dev_rviz_teleop_only.launch.py  gps_sim_teleop_only.launch.py  gps_waypoint_follower.launch.py  mapviz.launch.py  physical_lidar.launch.py  real_map_mode.launch.py  real_nav_mode.launch.py  real_teleop_only.launch.py  sim_bringup.launch.py  sim_map_mode.launch copy.py  sim_map_mode.launch.py  sim_map_mode_and_qrcodes.launch.py  sim_nav_mode.launch.py  sim_teleop_only.launch.py
src/kc_vision_bringup/nav2_gps_waypoint_follower_demo/: gps_coverage_planner.py  gps_waypoint_logger.py  interactive_waypoint_follower.py  logged_waypoint_follower.py
src/kc_vision_bringup/params/: TminiPro.yaml  custom_ydlidar.yaml  slam_params.yaml  ydlidar.yaml
src/kc_vision_bringup/rviz/: dev_rviz_map_config.rviz  dev_rviz_nav_config.rviz  dev_rviz_teleop_config.rviz  navigation.rviz
src/kc_vision_bringup/scripts/: coverage_planner.py
src/kc_vision_bringup/src/: ydlidar_ros2_driver_node.cpp
src/kc_vision_description/: CMakeLists.txt  package.xml
src/kc_vision_description/assets/: base_link.part  base_link.stl  camera_link.part  camera_link.stl  lidar_link.part  lidar_link.stl  wheel_link.part  wheel_link.stl
src/kc_vision_description/launch/: rviz.launch.py
src/kc_vision_description/meshes/: 130mm_gripper_1_1.stl  130mm_gripper_2_1.stl  150mm_Cutting_disc_holder_v4_1.stl  A7_-_DC_Geared_Motor_2_1.stl  A7_-_DC_Geared_Motor_v1_1.stl  A7_-_DC_Geared_Motor_v1_Mirror___1__1.stl  Part4_v1_1.stl  Part4_v1__1__1.stl  Plastic_Rim_v1_1.stl  Plastic_Rim_v1__1__1.stl  Tyre_1_1.stl  Tyre_2_1.stl  Tyre_v1_1.stl  Tyre_v1__1__1.stl  Wheel_Rim_s_v1_1.stl  Wheel_Tire_ipt__1.stl  bracket_1_1.stl  bracket_2_1.stl  bracket_v1_1.stl  bracket_v1__1__1.stl  camera_1.stl  camera_Intel_D415_v1_1.stl  caster_wheel_1.stl  caster_wheel__1__1.stl  front_left_rim_1.stl  front_right_rim_1.stl  gps_v1_1.stl  imu_link_1.stl  imu_sensor_TM171__1.stl  left_A7_-_DC_Geared_Motor_1.stl  left_Wheel_Rim_1.stl  left_Wheel_tire_1.stl  lidar_link_1.stl  right_A7_-_DC_Geared_Motor_1.stl  right_Omni_Wheel__1.stl
src/kc_vision_description/meshes_/: A7_-_DC_Geared_Motor_v1_1.stl  A7_-_DC_Geared_Motor_v1_Mirror__1.stl  A7_-_DC_Geared_Motor_v1_Mirror__Mirror__1.stl  base_link.stl  left_Omni_Wheel_v1__1__1.stl  lidar_1.stl  (+2 more)
src/kc_vision_gazebo/: CMakeLists.txt  package.xml
src/kc_vision_gazebo/config/: ros_gz_bridge.yaml
src/kc_vision_gazebo/launch/: gazebo.launch.py  gps_gazebo.launch.py
src/kc_vision_gazebo/models/house_interior/: house_interior_with_qrcodes.dae
src/kc_vision_gazebo/models/my_maze/: my_maze_1.dae
src/kc_vision_gazebo/rviz/: gazebo_and_rviz_and_localization_config.rviz
src/kc_vision_gazebo/worlds/: full_grass.sdf  grass.sdf  indoor_world_with_qr_codes.sdf  maze_world_1.sdf  obstacles_in.sdf  tree_grass.sdf  virtual_grass_world.sdf  visionkc.sdf
src/kc_vision_hardware/: CMakeLists.txt  kc_vision_hardware.xml  package.xml
src/kc_vision_hardware/include/kc_vision_hardware/: kc_vision_system.hpp
src/kc_vision_hardware/src/: kc_vision_system.cpp
src/kc_vision_localization/: CMakeLists.txt  package.xml
src/kc_vision_nav2/: CMakeLists.txt  package.xml
src/kc_vision_nav2/config/: nav2_real_params copy.yaml  nav2_real_params.yaml  nav2_real_params_rpp.yaml  nav2_sim_params copy.yaml  nav2_sim_params.yaml  nav2_sim_params_old.yaml
src/kc_vision_nav2/launch/: nav2.launch.py
src/kc_vision_nav2/rviz/: nav2_rviz_config.rviz
src/kc_vision_nav2/src/: cmd_vel_watchdog.cpp
src/kc_vision_perception/: package.xml  setup.cfg  setup.py
src/kc_vision_scripts/: package.xml  setup.cfg  setup.py
src/kc_vision_slam/: CMakeLists.txt  package.xml
(+495 files in other folders)
