<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kc_vision_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bingikiranchand932@gmail.com">kiranchand</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>kc_vision_gazebo</exec_depend>
  <exec_depend>kc_vision_description</exec_depend>
  <exec_depend>kc_vision_slam</exec_depend>
  <exec_depend>kc_vision_localization</exec_depend>
  <exec_depend>kc_vision_nav2</exec_depend>
  <exec_depend>kc_vision_scripts</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>twist_stamper</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
